# Note-app

./: .gitignore  Dockerfile  README.md  bot.py  docker-compose.yaml  log.ini  main.py  pyproject.toml
auth/: models.py  schemas.py  security.py
core/: config.py  database.py  schemas.py
migrations/: env.py
migrations/versions/: 55367c762063_.py  960361f5946f_.py  d04241e511aa_.py  fc6521346c62_.py
notes/: endpoints.py  models.py  schemas.py
